--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "face-api.js": "^0.22.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-error-boundary": "^6.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3",
     "tailwindcss": "^4.1.13"
